# acc

./: CMakeLists.txt  Dockerfile
crag/: CMakeLists.txt
crag/acc_enumeration/: ACIndex.cpp  ACIndex.h  ACPairProcessQueue.h  ACWorker.cpp  ACWorker.h  ACWorkerStats.cpp  ACWorkerStats.h  CMakeLists.txt  README.md  Terminator.cpp  Terminator.h  acc_class.cpp  acc_class.h  acc_classes.cpp  acc_classes.h  acc_enumerate.cpp  boost_filtering_stream.h  config.cpp  config.h  convert_byte_count.cpp  convert_byte_count.h  dump_cleanup.cpp  external_sort.cpp  external_sort.h  shared_queue.h  state_dump.cpp  state_dump.h  stopwatch.cpp  stopwatch.h
crag/compressed_word/: CMakeLists.txt  compressed_word.cpp  compressed_word.h  endomorphism.h  enumerate_words.h  longest_common_subword_cyclic.cpp  longest_common_subword_cyclic.h  profile_tuple_normal_form.cpp  test_compressed_word.cpp  test_endomorphism.cpp  test_longest_common_subword_cyclic.cpp  test_tuple_normal_form.cpp  test_xy_letter.cpp  tuple_normal_form.cpp  tuple_normal_form.h  xy_letter.h
crag/disjoint_subsets/: CMakeLists.txt  disjoint_subsets.h  test_disjoint_subsets.cpp
crag/enumerate/: CMakeLists.txt  analyze.cpp  canonical_word_mapping.cpp  canonical_word_mapping.h  enumerate.cpp  normal_form.cpp  normal_form.h  orbits.cpp  simplify_words.cpp  trivial_presentations.cpp
crag/folded_graph/: CMakeLists.txt  complete.cpp  complete.h  folded_graph.cpp  folded_graph.h  harvest.cpp  harvest.h  modulus.cpp  modulus.h  test_folded_graph.cpp  test_harvest.cpp
crag/folded_graph/internal/: cycles.h  cycles_examples.h  folded_graph_internal_checks.h  naive_folded_graph.h
crag/multithreading/: CMakeLists.txt  SharedQueue.cpp  SharedQueue.h  sem.h  test_shared_queue.cpp
